no more galaxies

--- a/tex/old/o1s_first.tex
+++ b/tex/old/o1s_first.tex
@@ -1,5 +1,5 @@
-
 \documentclass[12pt]{article}
+\usepackage{graphicx}
 % updated 02/02/02 to follow fall 01
 \topmargin -.6in
 
@@ -314,17 +314,7 @@ What magnitude is it: \makebox[4cm]{\hrulefill}
  
 Locate it with binoculars. Can you see it now: \makebox[4cm]{\hrulefill}
 
-
 \newpage
-\vspace*{21cm}
-{\hfill Figure 1 \ \ \ \  \hfill}
+\includegraphics[clip=true trim=0in 1in 0in 1in]{janfebstars.jpg}\\
+{~ \hfill Figure 1 \hfill ~}
 \end{document}
-
-
-
-
-
-
-
-
-
