--- a/tex/2017/midterm.tex
+++ b/tex/2017/midterm.tex
@@ -2,14 +2,17 @@
 \input{physics1}
 \begin{document}
 
-\noindent
-Name: \rule[-1ex]{0.55\textwidth}{0.1pt}
-NetID: \rule[-1ex]{0.2\textwidth}{0.1pt}
+\section*{Observational Astronomy---Midterm Exam}
 
-\section*{NYU Observational Astronomy---Midterm Exam}
+\textsl{This midterm is composed of short-answer questions about the
+  reading component of this course. They should be straightforward to
+  answer if you review the reading assignments. Do your work on your
+  own. If you discuss these questions with another class member, say
+  who that is on your answer sheet. Your answers are due on
+  \textbf{2017 Monday March 27 at 15:30 EDT}.}
 
 \begin{enumerate}
-\item Translate RA $=$ 18h37m32.1s to Dec $=$ 51$^\circ$ 13$'$ 27$"$
+\item Translate RA $=$ 18h37m32.1s and Dec $=$ 51$^\circ$ 13$'$ 27$"$
   to decimal units.
 \item Measure the width of your fist, and the length of your arm. You
   see a person approaching. If you hold your fist extended, it just
@@ -27,7 +30,7 @@ to what altitude and azimuth are you pointing?
   September 23? December 21?
 \item In what latitudes does the Sun ever pass directly overhead? What
   are such latitudes called?
-\item In Tallahassee, what declinations do stars have that never set?
+\item In Tallahassee, at what declinations are the stars that never set?
   that never rise?
 \item Say you observe a star at Dec = 0 passing through a telescope's
   field of view in 4 minutes. What is the angular size of that field
@@ -39,18 +42,14 @@ to what altitude and azimuth are you pointing?
 \item On what day are the LST and standard local time nearly
   identical?
 \item How is Daylight Savings Time defined?
-\item How much brighter is a magnitude 0 stars than a magnitude 5 star?
 \item You go outside one night at midnight standard time in New York
   State, and see Merak and Dubhe pointing down vertically at
   Polaris. What month is it? 
 \item What is field of view of a 2m focal length telescope with a 40mm
   eyepiece? 10mm?
-\item What is the siderial period of the Moon's orbit?
-\item What is the synodic period of the Moon's orbit?
-\item Which one governs the period of the Moon's phases as seen from
+\item What are the siderial and synodic periods of the Moon's orbit, in days?
+  Which one governs the period of the Moon's phases as seen from
   the Earth?
-\item Draw the configurationf the Moon, Sun and Earth at new moon,
-  first quarter, full moon, and third quarter.
 \item If you see the moon high in the sky near sunrise, what phase is
   it going to be at? If it is high in the sky near sunset?
 \item What is the average distance to the Moon? Its perigee and apogee?
