--- a/labbook/celestial_text.tex
+++ b/labbook/celestial_text.tex
@@ -201,9 +201,8 @@ Arcturus: Alt:= \makebox[4cm]{\hrulefill} Az= \makebox[4cm]{\hrulefill}
 
 \bigskip
 \noindent
-Below is list of the RA and Dec coordinates of the planets for
-(approximately) this evening. They do not change by very much during
-the course of the semester. Enter the coordinates in the table below
+Below is list of the planets. Your instructor will provide you with the RA, Dec
+positions for the planets appropriate for this evening. Enter the coordinates in the table below
 and locate the planets on the globe with small pieces of paper. Find
 the constellation each planet is in, and estimate its Alt and Az. If
 it is below the horizon, enter ``Not visible'' in the Alt-Az columns.
@@ -223,14 +222,14 @@ it is below the horizon, enter ``Not visible'' in the Alt-Az columns.
 Planet  & \ \ \ \ RA  \ \ \ & \hspace{1.5cm} Dec \hspace{1.5cm} &
          Constellation &\ \ \ \  Alt \ \ \ \ & \ \ \ \  Az\ \ \  \ \\ 
          \hline
-Mercury   & 12h~23m & $-07^\circ 03'$  & & &       \\ \hline
-Venus   & 10h~46m & $+09^\circ 18'$  &     & &    \\ \hline
-Mars & 04h~44m & $+21^\circ 12'$  &     & &    \\ \hline
-Jupiter  & 00h~22m & $+00^\circ 35'$  &   & &      \\ \hline
-Saturn  & 21h~30m & $-16^\circ 13'$  &   & &      \\  \hline
-Uranus & 03h~04m & $+16^\circ 58'$  &    & &   \\  \hline 
-Neptune  & 23h~39m & $-03^\circ 35'$  &   & &    \\  \hline 
-Pluto  & 19h~54m &  $-23^\circ 06'$ &   & &    \\  \hline 
+Mercury   & ~~~~~~~~ & ~~~~~~~~ & & &       \\ \hline
+Venus     & & &     & &    \\ \hline
+Mars      & & &     & &    \\ \hline
+Jupiter   & & &   & &      \\ \hline
+Saturn    & & &   & &      \\  \hline
+Uranus    & & &    & &   \\  \hline 
+Neptune   & & &   & &    \\  \hline 
+Pluto     & & &   & &    \\  \hline 
 \end{tabular}
 \end{center}
 
