update for Hogg

--- a/labbook/syllabus_text.tex
+++ b/labbook/syllabus_text.tex
@@ -1,7 +1,6 @@
-\noindent{\bf Observational Astronomy / PHYS-UA 13 / Fall 2022 /
-  Syllabus }
+\paragraph{Observational Astronomy / NYU PHYS-UA 13 / 2023 Fall / Syllabus}
 
-\noindent {\bf Course Summary}: This course will teach you how to
+\paragraph{Course Summary:} This course will teach you how to
 observe the sky carefully with your naked eye, binoculars, and a small
 telescope. You will learn the basics of observable lunar and planetary
 properties, and the basics of astronomical coordinates and
@@ -9,98 +8,76 @@ observations. The goal is for you to be able to understand and
 describe what you see in the sky at night, and to be able to use
 charts and coordinates to predict it.
 
-\noindent {\bf Instructors}: Prof. Michael Blanton (726 Broadway,
-Rm 941, {\tt mb144@nyu.edu}) and TA Nick Faucher ({\tt
-  ntf229@nyu.edu}).
+\paragraph{Instructors:} Professor David W Hogg (726 Broadway,
+Rm 1050, {\tt david.hogg@nyu.edu}) and TA Valentina~Tardugno ({\tt
+  vt2189@nyu.edu}).
 
-\noindent {\bf Help \& Questions Time}: Prof. Blanton will be available in
-  his office and/or on Zoom every Wednesday from 12:30pm to 2pm if you
-  have questions or need help with the classwork. Feel free to email
-  with an alternative appointment time if that time does not work.
- 
-\noindent {\bf Books}: The primary books are below.
+\paragraph{Help \& Questions Time:} Prof Hogg will be available in
+  his office every Monday from 09:00 through 12:00 if you
+  have questions or would like help on anything.
+
+\paragraph{Books:} The primary books are
 \begin{itemize}
 \item {\it Astronomy: A Self-Teaching Guide}, by Dinah Moche
 \item {\it The Amateur Astronomer's Introduction to the Celestial
   Sphere}, by William Millar
-\item This laboratory manual. 
+\item {\it Edmund Mag 5 Star Atlas} (this will be supplied to you)
 \end{itemize}
-There is a digital reserve copy of Moche available at the NYU
+There is a digital copy of Moche available at the NYU
 Library. For Millar, as of writing this syllabus, it is not
 available through the library. This lab manual is available in PDF
-format on Brightspace. We will also use the following books:
+format on Brightspace. We may also use the following:
 \begin{itemize}
 \item {\it Sky \& Telescope's Pocket Sky Atlas}, by Roger W.~Sinnott
 (we have copies in the lab rooms).
-\item {\it Edmund Mag 5 Star Atlas} (will be supplied to you)
 \end{itemize}
 
-\noindent {\bf Lecture}: Each week you will attend one lecture
-(at 3:30pm Monday in Room 369 of the Global Center of Academic \&
-Spiritual Life). There is reading material listed for each week, and I
-will distribute notes on Brightspace prior to each lecture too; it
-will be best to read that material {\it before class}.  There will be
-quizzes every lecture that will contribute to your grade, and other
-activities that you will also learn from, so please attend! Let me
-know {\it ahead of time} if you cannot.
+\paragraph{Lecture:} Each week there is one Lecture, and
+there will be reading material assigned each week via Brightspace.
+There will be Lecture Questions related to each lecture that
+you can use to check that you are following the material.
 
-\noindent {\bf Grading}: Grades are based on labs (20\% on written
-material, 5\% on extra good work), weekly lecture questions (25\%),
-weekly quizzes (10\%), one midterm (20\%), and the final (20\%).
+\paragraph{Grading:} Grades are based on Labs (65\%) 
+one Midterm (10\%), and the Final (25\%).
 
-\noindent {\bf Lecture Questions}: Each week (starting with the second week)
-you will hand in the lecture questions associated with the previous
-weeks' lecture. I will grade two of the questions each week (I won't
-tell you which!).
+\paragraph{Exams:} For the Midterm and the Final you are
+responsible for material in the Labs, in the Lectures, and in the assigned reading.
+In preparing for the exams, use the Lecture Questions as a
+guide to which material is essential (and the types of
+questions to be asked).
 
-\noindent {\bf Quizzes}: Each week (starting with the second week)
-there will be a 5-minute quiz at the start of lecture.  Questions will
-be based on the lecture questions due that day, and will involve the
-conceptual questions (i.e. I won't ask the exact mass of the Sun or
-other pure memorization questions).  Prepare for the quiz by answering
-the lecture questions each week! For the quiz itself, I'll present two
-question options and you can answer either one of the two questions.
-
-\noindent {\bf Exams}: For the midterm and the final you are
-responsible for material in the labs, the reading, and the
-homework. In preparing for the exams, use the lecture question as a
-guide to which material I believe is essential and the types of
-questions I will ask.
-
-\noindent {\bf Lab (meet in Meyer 224)}: Arrive on time at 7:00pm for
-the lab. We will discuss the contents of the lab and conduct some
+\paragraph{Lab (in Meyer 224):} Arrive on time at 7:00pm for
+the Lab. We will discuss the contents of the Lab and conduct some
 indoor activities. If weather permits, we will proceed to the rooftop
 observatory. If weather doesn't permit, we will have indoor
 activities.
 
-\noindent {\bf What If I Have to Miss Lab?}: If you must miss lab due
-to medical reasons or a truly unavoidance circumstance, contact the
-professor {\it and} the TA with the justification. Other than such
-circumstances, you can miss {\bf one lab} during the semester without
-penalty: you must however contact the lab instructor explicitly {\bf
-beforehand} to claim this credit. If you are absent for any other lab
-without good cause you will lose credit for that lab.  If you miss
+\paragraph{What If I Have to Miss Lab?} If you must miss lab due
+to medical reasons, contact the
+professor with the justification. If you are absent for any other lab
+without good cause you will lose credit for that lab. If you miss
 more than three labs without good cause, you will not be given a
 passing grade in the course.
 
-\noindent {\bf Weekly Lab Entries}: Finally, the last lab in this book
+\paragraph{Weekly Lab Entries:} There is, in addition to the weekly
+Labs, a full-semester Lab, which
 should have entries filled in {\bf every week}, and should be handed
-in on the final lab date.
+in on the final Lab date, as a final Lab.
 
-\noindent {\bf No Switching Between Labs}: You cannot switch
-between the lab's Monday and Wednesday sections mid-semester, because
-in general they will be on different schedules. The timing of the
+\paragraph{No Switching Between Labs:} You cannot switch
+between the lab's Monday and Wednesday sections, because
+in general they will be on different schedules, and because there are
+room and facility occupation rules. The timing of the
 indoor and outdoor labs for each section will be driven mostly by the
-weather. 
+weather.
 
-\noindent {\bf Dress Warmly}: Please dress appropriately for remaining
+\paragraph{Dress \& Safety:} Please dress appropriately for remaining
 outside for an extended period, including hats and gloves when
 appropriate, which will be more often than you think.
+There will be some safety rules in the Labs and at the rooftop observatory.
+Failure to obey the rules will get you removed from the Lab.
 
-\noindent {\bf Do not use your phones during lab unless directed
-to!}
-
-\noindent {\bf Accommodations}: I am committed to creating an
+\paragraph{Accommodations:} We are committed to creating an
 inclusive and accessible classroom environment for students of all
 abilities. Students who may need academic accommodations are advised
 to reach out to the Moses Center for Student Accessibility as early as
@@ -111,15 +88,6 @@ connecting with the Moses Center or other resources, please also let
 me know. Students who need accommodations for the laboratory component
 of the class should talk to me about their needs so we can arrange a
 solution.
-
-\noindent {\bf Health}: I encourage all students to
-attend to their general mental and physical health. To access the
-University's extensive health and mental health resources, contact the
-NYU Wellness Exchange. You can call its private hotline (212-443-9999)
-or chat (in six different languages) via the Wellness Exchange app or
-at {\tt wellness.exchange@nyu.edu}, available 24 hours a day, seven
-days a week, to reach out to a professional who can help to address
-day-to-day challenges as well as other health-related concerns.
 
 \clearpage
 
