tweaks for 2023 Fall

--- a/labbook/astronomy.tex
+++ b/labbook/astronomy.tex
@@ -2,7 +2,7 @@
 \usepackage{epsfig}
 \usepackage{rotating}
 \usepackage{makecell}
-
+\frenchspacing
 
 % ISSUES:
 %  Spring/Fall -- no "Spring" version of Starry Night indoor lab
@@ -266,7 +266,7 @@
 \cleardoublepage
 \stepcounter{thelabs}
 \noindent
-{\hfill \Large {\bf Outdoor Lab \#\labnum: Every Time Sheet} \hfill}
+{\hfill \Large {\bf Outdoor Lab \#\labnum: Full-semester Sheet} \hfill}
 \input{every_lab_text}
 
 \end{document}
