--- a/labbook/every_lab_text.tex
+++ b/labbook/every_lab_text.tex
@@ -4,13 +4,17 @@ the end of the semester. If we are outdoors in lab, fill in all pages.
 If we are indoors during lab, just fill in the Moon section if there
 is some clear night that week.
 
-\noindent
-{\bf Draw Polaris, Casseopia}  
+%% \paragraph{Draw Polaris, Casseopia}
+%% Put Polaris at the center of this plot. Draw the ``W'' of Casseopia as
+%% it appears each night in lab at around 7:30pm Standard Time. This will
+%% be 8:30pm Daylight Time. Mark each location with a date.
 
-Put Polaris at the center of this plot. Draw the ``W'' of Casseopia as
+\paragraph{Draw Polaris, The Big Dipper}
+Put Polaris at the center of this plot, and North upwards.
+Draw the Big Dipper as
 it appears each night in lab at around 7:30pm Standard Time. This will
 be 8:30pm Daylight Time. Mark each location with a date.
- 
+
 \begin{minipage}[b]{8cm}{\psfig{figure={o3s_f1.eps},width=14.0cm}}\end{minipage}
 
 %\clearpage
