--- a/labbook/syllabus_text.tex
+++ b/labbook/syllabus_text.tex
@@ -8,9 +8,11 @@ observations. The goal is for you to be able to understand and
 describe what you see in the sky at night, and to be able to use
 charts and coordinates to predict it.
 
-\paragraph{Instructors:} Professor David W Hogg (726 Broadway,
-Rm 1050, {\tt david.hogg@nyu.edu}) and TA Valentina~Tardugno ({\tt
-  vt2189@nyu.edu}).
+\paragraph{Instructors:}
+\begin{itemize}
+\item Professor {\bf David W Hogg} (726 Broadway, Rm 1050, {\tt david.hogg@nyu.edu})
+\item TA {\bf Valentina Tardugno} ({\tt vt2189@nyu.edu})
+\end{itemize}
 
 \paragraph{Help \& Questions Time:} Prof Hogg will be available in
   his office every Monday from 09:00 through 12:00 if you
@@ -23,14 +25,13 @@ Rm 1050, {\tt david.hogg@nyu.edu}) and TA Valentina~Tardugno ({\tt
   Sphere}, by William Millar
 \item {\it Edmund Mag 5 Star Atlas} (this will be supplied to you)
 \end{itemize}
-There is a digital copy of Moche available at the NYU
-Library. For Millar, as of writing this syllabus, it is not
-available through the library. This lab manual is available in PDF
-format on Brightspace. We may also use the following:
+Buy Moche and Millar used (or new) by whatever means you prefer.
+We may also use the following:
 \begin{itemize}
 \item {\it Sky \& Telescope's Pocket Sky Atlas}, by Roger W.~Sinnott
 (we have copies in the lab rooms).
 \end{itemize}
+{\it Wikipedia} is also extremely useful in this class!
 
 \paragraph{Lecture:} Each week there is one Lecture, and
 there will be reading material assigned each week via Brightspace.
@@ -41,7 +42,7 @@ you can use to check that you are following the material.
 one Midterm (10\%), and the Final (25\%).
 
 \paragraph{Exams:} For the Midterm and the Final you are
-responsible for material in the Labs, in the Lectures, and in the assigned reading.
+responsible for material in the Lectures and the assigned reading.
 In preparing for the exams, use the Lecture Questions as a
 guide to which material is essential (and the types of
 questions to be asked).
@@ -59,8 +60,8 @@ without good cause you will lose credit for that lab. If you miss
 more than three labs without good cause, you will not be given a
 passing grade in the course.
 
-\paragraph{Weekly Lab Entries:} There is, in addition to the weekly
-Labs, a full-semester Lab, which
+\paragraph{Full-semester Lab:} There is, in addition to the weekly
+Labs, a Full-semester Lab, which
 should have entries filled in {\bf every week}, and should be handed
 in on the final Lab date, as a final Lab.
 
