--- a/labbook/astronomy.tex
+++ b/labbook/astronomy.tex
@@ -45,26 +45,26 @@
 
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: coordinates and angles} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: Coordinates and angles} \hfill}
 \input{celestial_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: telescope} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: Telescopes} \hfill}
 \input{telescope_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: rotation and orbit of
+{\hfill \Large {\bf Lecture and reading questions: Rotation and orbit of
   Earth} \hfill}
 \input{rotation_orbit_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: finding your way} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: Finding your way} \hfill}
 \input{finding_questions}
 
 \cleardoublepage
