--- a/labbook/finding_questions.tex
+++ b/labbook/finding_questions.tex
@@ -17,9 +17,9 @@
 \vspace{80pt}
 \item What is field of view of a 2m focal length telescope with a 40mm
   eyepiece? 10mm?
-\vspace{80pt}
-\item Complete the preparation for one of the outdoor labs titled
-  ``Finding an object.'' Complete it for Messier 2, a globular cluster. Do
-  not hand it in or take it out of your lab notebook, but keep it for
-  use in lab later in the semester.
+%% \vspace{80pt}
+%% \item Complete the preparation for one of the outdoor labs titled
+%%   ``Finding an object.'' Complete it for Messier 2, a globular cluster. Do not
+%%   not hand it in or take it out of your lab notebook, but keep it for
+%%   use in lab later in the semester.
 \end{enumerate}
