--- a/labbook/telescope_questions.tex
+++ b/labbook/telescope_questions.tex
@@ -2,9 +2,9 @@
 \begin{enumerate}
 \item How much brighter is a magnitude 0 star than a magnitude 5 star?
 \vspace{80pt}
-\item What are the wavelengths can our eyes see?
+\item What is the range of wavelengths that typical human eyes can see?
 \vspace{80pt}
-\item How do our eyes distinguish colors?
+\item How do human eyes distinguish colors?
 \vspace{80pt}
 \item Describe two reasons we use telescopes to view faint objects in
   the sky.
@@ -18,11 +18,11 @@
 \item For a 1 meter focal length telescope, what is the magnification
   using a 20mm eyepiece? What is its approximate field of view?
 \vspace{80pt}
-\item How much more light does a 10 inch telescope collect relative to
-  a 5 inch telescope?
+\item How much more light does a 10 inch (diameter) telescope collect relative to
+  a 5 inch (diameter) telescope?
 \vspace{80pt}
 \item If an equatorial telescope is tracking, how long does it take to
-  complete one revolution? 
+  complete one full revolution? 
 \vspace{80pt}
 \item Why do space telescopes yield sharper images than ground-based
   telescopes?
