finding your way

--- a/labbook/astronomy.tex
+++ b/labbook/astronomy.tex
@@ -65,61 +65,62 @@
 \stepcounter{thelecs}
 \noindent
 {\hfill \Large {\bf Lecture and reading questions: Finding your way} \hfill}
-\input{finding_questions}
+\input{finding_questions_fall}
+% \input{finding_questions_spring}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: stars} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: stars} \hfill}
 \input{stars_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: variables \& binaries} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: variables \& binaries} \hfill}
 \input{variable_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: galaxies} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: galaxies} \hfill}
 \input{galaxies_questions} 
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: moon} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: moon} \hfill}
 \input{moon_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: planets} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: planets} \hfill}
 \input{planets_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: moons of the planets} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: moons of the planets} \hfill}
 \input{pmoons_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: precession \&
+{\hfill \Large {\bf Lecture and reading questions: precession \&
     nutation} \hfill}
 \input{precession_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: tides \& eclipses} \hfill}
+{\hfill \Large {\bf Lecture and reading questions: tides \& eclipses} \hfill}
 \input{tides_questions}
 
 \cleardoublepage
 \stepcounter{thelecs}
 \noindent
-{\hfill \Large {\bf Lecture Questions \#\lecnum: asteroids, comets,
+{\hfill \Large {\bf Lecture and reading questions: asteroids, comets,
     meteors} \hfill}
 \input{small_questions}
 
