--- a/labbook/finding_questions_fall.tex
+++ b/labbook/finding_questions_fall.tex
@@ -17,9 +17,31 @@
 \vspace{80pt}
 \item What is field of view of a 2m focal length telescope with a 40mm
   eyepiece? 10mm?
-\vspace{80pt}
-\item Complete the preparation for one of the outdoor labs titled
-  ``Finding an object.'' Complete it for Messier 2, a globular cluster. Do
-  not hand it in or take it out of your lab notebook, but keep it for
-  use in lab later in the semester.
+\clearpage
+\item Complete these questions for Messier 2, a globular cluster. Keep your answers for
+  use in Lab later in the semester.
+  \begin{enumerate}
+    \item At what altitude does it transit when observed from New York City?
+\item What hour angle will it have at around 
+8pm Eastern Time tonight?
+\item Will it be rising or setting?
+\end{enumerate}
+\vspace{20pt}
+
+Now look at the object on the map in the Edmund Atlas for which it is closest
+to the center of the map (that is, not one where it is very near the
+edge). What is the nearest naked-eye visible star ($m<3.5$ in NYC!)?
+
+\vspace{40pt}
+
+Can you put the bright star and your object both in the finder
+field (say it has 7 deg diameter)? 
+
+\vspace{20pt}
+
+\begin{enumerate}
+\item If so, draw (below) what it will look like
+(assuming the finder does not invert the view, which our finders do
+not)?
+  \end{enumerate}
 \end{enumerate}
